--- a/index.css
+++ b/index.css
@@ -1,3 +1,25 @@
 .h1 {
     color: rgb(18, 33, 64);
 }
+
+.Topnav a {
+    float: left;
+    color: #A9C6D9;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font size: 17px;
+}
+
+/* Change the color of the links on hover */
+.Topnav a:hover  {
+    background-color: #122140;
+    color: black;
+}
+
+/* Add a color to the active/current link*/
+.Topnav a.active {
+    background-color: #122140;
+    color: white;
+}
+
