--- a/index.css
+++ b/index.css
@@ -2,24 +2,30 @@
     color: rgb(18, 33, 64);
 }
 
-.Topnav a {
-    float: right;
-    color:#122140
+/* Add a black background color to the top navigation */
+.topnav {
+    background-color: #333;
+    overflow: hidden;
+  }
+  
+  /* Style the links inside the navigation bar */
+  .topnav a {
+    float: left;
+    color: #f2f2f2;
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
-    font size: 17px;
-}
-
-/* Change the color of the links on hover */
-.Topnav a:hover  {
-    background-color: #A9C6D9; 
-    color: #122140
-}
-
-/* Add a color to the active/current link*/
-.Topnav a.active {
-    background-color: #122140;
-    color: #A9C6D9
-}
-
+    font-size: 17px;
+  }
+  
+  /* Change the color of links on hover */
+  .topnav a:hover {
+    background-color: #ddd;
+    color: black;
+  }
+  
+  /* Add a color to the active/current link */
+  .topnav a.active {
+    background-color: #04AA6D;
+    color: white;
+  }
