--- a/index.css
+++ b/index.css
@@ -11,7 +11,7 @@
   .topnav a {
     float: left;
     color: #f2f2f2;
-    text-align: center;
+    text-align: end;
     padding: 14px 16px;
     text-decoration: none;
     font-size: 17px;
