--- a/Index/Index.css
+++ b/Index/Index.css
@@ -1,6 +1,3 @@
-head{
-  background-color: blue;
-}
 
 <html>
 <head>
@@ -13,17 +10,23 @@ body {
 
 .topnav {
   overflow: hidden;
-  background-color: #333;
+  background-color:#A9C6D9;
 }
 
 .topnav a {
   float: left;
   color: #f2f2f2;
-  text-align: center;
+  text-align: end;
   padding: 14px 16px;
   text-decoration: none;
   font-size: 17px;
 }
+
+.logo{
+  margin: 10px;
+  right: 20px;
+}
+
 
 .topnav a:hover {
   background-color: #ddd;
@@ -31,9 +34,23 @@ body {
 }
 
 .topnav a.active {
-  background-color: #04AA6D;
+  background-color: #122140;
   color: white;
 }
 </style>
 </head>
 <body>
+
+.btn {
+  background-color: #122140;
+  border: none;
+  color: white;
+  padding: 12px 16px;
+  font-size: 16px;
+  cursor: pointer; 
+}
+
+.btn:hover {
+background-color:#A9C6D9
+}
+
