--- a/Index/Index.css
+++ b/Index/Index.css
@@ -22,12 +22,6 @@ body {
   font-size: 17px;
 }
 
-.logo{
-  margin: 10px;
-  right: 20px;
-}
-
-
 .topnav a:hover {
   background-color: #ddd;
   color: black;
@@ -41,16 +35,13 @@ body {
 </head>
 <body>
 
-.btn {
-  background-color: #122140;
-  border: none;
-  color: white;
-  padding: 12px 16px;
-  font-size: 16px;
-  cursor: pointer; 
-}
-
-.btn:hover {
-background-color:#A9C6D9
+.div class{
+  
+#Rainydays_Logo.png .head{
+  position: 
+  height; 40px
+  background: #a9c6d9
+  border-radius: 60px 60px 0 0 / 50px 50px 0 0;
+  border: 2px solid #122140;
 }
 
