--- a/Index/Index.css
+++ b/Index/Index.css
@@ -4,40 +4,40 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
 body {
-  margin: 0;
-  font-family: Arial, Helvetica, sans-serif;
+  margin: 50;
+  font-family: Coolvetica, Arial, Verdana;
 }
 
-
-
-
-
+h1{
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  text-align: center;
 }
-
-.img {
-  position: ;
-  float: left;
-  width: 50px;
-  height: 50px;
-  background-position: 50% 50%;
-  background-repeat: no-repeat;
-  background-size: cover;
-  }
 
 .topnav {
   overflow: hidden;
   background-color:#A9C6D9;
 }
 
+img {
+  border-radius: 8px;
+}
+
+.search{
+  padding-left: 10px;
+}
+
 .topnav a {
-  float: left;
+  float: inline-end
   color: #f2f2f2;
-  text-align: end;
-  padding: 14px 16px;
+  text-align: :right;
+  padding:14px 16px
   text-decoration: none;
   font-size: 17px;
 }
 
+.search{
+  border-radius: 8px;
+}
 .topnav a:hover {
   background-color: #ddd;
   color: black;
@@ -46,12 +46,16 @@ body {
 .topnav a.active {
   background-color: #122140;
   color: white;
+  size: 20px;
 }
+
 </style>
 </head>
 <body>
 
-.div class{
+
+
+}
   
 
 
