--- a/Index/Index.css
+++ b/Index/Index.css
@@ -13,42 +13,106 @@ h1{
   text-align: center;
 }
 
-.topnav {
-  overflow: hidden;
-  background-color:#A9C6D9;
+p{
+  text-align: center;
+}
+.navigation-bar a:hover {
+  background-color: #122140;
+  color: #A9C6D9;
 }
 
-img {
-  border-radius: 8px;
-}
-
-.search{
-  padding-left: 10px;
-}
-
-.topnav a {
-  float: inline-end
-  color: #f2f2f2;
-  text-align: :right;
-  padding:14px 16px
-  text-decoration: none;
-  font-size: 17px;
-}
-
-.search{
-  border-radius: 8px;
-}
-.topnav a:hover {
-  background-color: #ddd;
-  color: black;
-}
-
-.topnav a.active {
+.navigation-bar a.active {
   background-color: #122140;
   color: white;
   size: 20px;
 }
 
+.navigation-bar {
+  width: 100%;  
+  height: 190px; 
+  background-color:#A9C6D9;
+}
+.logo {
+  display: inline-block;
+  vertical-align: top;
+  width: 190px;
+  height: 140px;
+  margin-right: 90px;
+  margin-top: 15px;   
+}
+.navigation-bar input .search{
+  border-radius: 8px;
+  padding: 6px;
+}
+.navigation-bar > a {
+  display: inline-block;
+  vertical-align: top;
+  margin-right: 20px;
+  height: 80px;        
+  line-height: 80px;   
+}
+
+<section>
+.mountains{
+  vertical-align: bottom;
+  display: inline-block;
+  width: 50%;
+  margin-right: 150px;
+}
+</section>
+
+  .img{
+  display: inline-block;
+  vertical-align: bottom;
+  Width: 400px;
+  height: 200px;
+  margin-right: 150px;
+  margin-bottom: 40px;
+}
+
+html {
+  box-sizing: border-box;
+}
+
+*, *:before, *:after {
+  box-sizing: inherit;
+}
+
+.column {
+  float: left;
+  width: 33.3%;
+  margin-bottom: 16px;
+  padding: 0 8px;
+}
+
+.card {
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  margin: 8px;
+}
+
+.about-section {
+  padding: 50px;
+  text-align: center;
+  background-color: #474e5d;
+  color: white;
+}
+
+.container {
+  padding: 0 16px;
+}
+
+.container::after, .row::after {
+  content: "";
+  clear: both;
+  display: table;
+}
+
+footer{
+  background-color: #A9C6D9;
+  vertical-align: bottom;
+  
+
+}
 </style>
 </head>
 <body>
