--- a/Index/Index.css
+++ b/Index/Index.css
@@ -3,67 +3,98 @@
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
+</head>
 body {
   margin: 50;
-  font-family: Coolvetica, Arial, Verdana;
 }
 
 h1{
-  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  font-family: 'Coolvetica', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   text-align: center;
 }
 
-
-.p a:hover {
+p{
+  font-family: 'Coolvetica', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   text-align: center;
+  display: inline-block;
+  margin-left: 35%;
+  margin-right: 35%;
+  width: 400px;
+}
+
+.Icons{
   float: right;
-  
-}
-.navigation-bar a:hover {
-  background-color: #122140;
-  color: #A9C6D9;
+  display: block;
+  color: #122140;
+  text-align: end;
+  padding: 14px 16px;
+  font-size: 17px;
+
+.Icons:hover {
+  color: #C4712C
 }
 
-.navigation-bar a.active {
+.menu:hover.active {
   background-color: #122140;
   color: white;
   size: 25px;
 }
 
-.navigation-bar {
-  width: 100%;  
-  height: 190px; 
-  background-color:#A9C6D9;
-}
-.navigation-bar {
-  display: inline-block;
-  vertical-align: top;
-  width: 100%
-  height: 140px;
-  margin-right: 350px;
-  margin-top: 15px;   
-  
+/* Add a black background color to the top navigation bar */
+.topnav {
+  overflow: hidden;
+  background-color: #A9C6D9;
 }
 
-.search{
-  float: inline-end;
-  border-radius: 8px;
+/* Style the links inside the navigation bar */
+.topnav a {
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: bolder;
+  float: left;
+  border-spacing: 20px;
+  display: block;
+  color: #122140;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+}
+
+/* Change the color of links on hover */
+.topnav a:hover {
+  background-color: #122140;
+  color:#A9C6D9;
+}
+
+/* Style the "active" element to highlight the current page */
+.topnav a.active {
+  background-color:#122140;
+  color: #A9C6D9;
+}
+
+.topnav input[type=text] {
+  float: right;
   padding: 6px;
+  border-radius: 20px;
+  margin-top: 8px;
+  margin-right: 16px;
+  font-size: 17px;
 }
 
-.navigation-bar > a {
-  display: inline-block;
-  vertical-align: top;
-  margin-right: 20px;
-  height: 80px;        
-  line-height: 80px;   
-}
-
-.section{
-  vertical-align: bottom;
-  display: inline-block;
-  width: 50%;
-  margin-right: 150px;
+@media screen and (max-width: 600px) {
+  .topnav a, .topnav input[type=text] {
+    float: none;
+    display: block;
+    text-align: left;
+    width: 100%;
+    margin: 0;
+    padding: 14px;
+  }
+  .topnav input[type=text] {
+    font-family: Arial, Helvetica, sans-serif;
+    border: 1px solid #ccc;
+    border-radius: 10px;
+  }
 }
 
 .img{
@@ -112,16 +143,20 @@ html {
   display: table;
 }
 
+section{
+  text-align: center;
+  
+}
+
 footer{
   background-color: #A9C6D9;
   vertical-align: bottom;
   text-align: center;
-  
-
 }
+
+</body>
 </style>
-</head>
-<body>
+
 
 
 
